force-app/main/default/objects/Pago__c/Pago__c.object-meta.xml
<CustomObject>
    <label>Pago</label>
    <nameField>
        <displayFormat>PAG-{0000}</displayFormat>
        <label>Numero de Pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>