force-app/main/default/objects/Pago__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha de Pago</label>
    <type>Date</type>
</CustomField>