force-app/main/default/objects/Pago__c/fields/Metodo_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_Pago__c</fullName>
    <label>Metodo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Transferencia</fullName><default>true</default><label>Transferencia</label></value>
            <value><fullName>Efectivo</fullName><default>false</default><label>Efectivo</label></value>
            <value><fullName>Cheque</fullName><default>false</default><label>Cheque</label></value>
            <value><fullName>Otro</fullName><default>false</default><label>Otro</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>