force-app/main/default/objects/Pago__c/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <label>Monto</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>